[gd_scene load_steps=5 format=3 uid="uid://dn5eutlmvobb0"]

[ext_resource type="Script" uid="uid://dn83uqgi0hu0k" path="res://scripts/computer_ui.gd" id="1_a82rf"]
[ext_resource type="Texture2D" uid="uid://dqpyid2x6hd2b" path="res://textures/antenna.png" id="1_w3x1j"]
[ext_resource type="Texture2D" uid="uid://b2tn412tdn4mn" path="res://textures/wallpaper.png" id="2_25mte"]

[sub_resource type="LabelSettings" id="LabelSettings_a82rf"]
font_size = 25

[node name="ComputerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a82rf")

[node name="Screen" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.2953125
anchor_top = 0.28472224
anchor_right = 0.3265625
anchor_bottom = 0.3402778
offset_left = -137.0
offset_top = -77.000015
offset_right = -137.0
offset_bottom = -77.000015
scale = Vector2(1.52, 1.52)

[node name="Border" type="ColorRect" parent="Screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.13159
offset_top = -77.89474
offset_right = 528.8684
offset_bottom = 346.10526
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1052636, 1)
color = Color(0, 0, 0, 1)

[node name="BSUS" type="Label" parent="Screen/Border"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = 188.0
offset_right = 35.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2
text = "BSUS"
horizontal_alignment = 1

[node name="Main" type="TextureRect" parent="Screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.3421
offset_top = -62.105263
offset_right = 2465.658
offset_bottom = 1377.8948
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.263, 0.263)
texture = ExtResource("2_25mte")

[node name="SignalIcon" type="Control" parent="."]
anchors_preset = 0
offset_left = 144.0
offset_top = 80.0
offset_right = 184.0
offset_bottom = 120.0
scale = Vector2(1.9547719, 2.7437584)

[node name="Antenna" type="Sprite2D" parent="SignalIcon"]
position = Vector2(20.462734, 11.662834)
scale = Vector2(0.058225498, 0.04148236)
texture = ExtResource("1_w3x1j")

[node name="Label" type="Label" parent="SignalIcon"]
layout_mode = 0
offset_left = -4.092557
offset_top = 20.409966
offset_right = 141.9342
offset_bottom = 95.409966
scale = Vector2(0.33631223, 0.26204765)
text = "Signal Manager"
label_settings = SubResource("LabelSettings_a82rf")
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="mouse_entered" from="SignalIcon" to="." method="_on_signal_icon_mouse_entered"]
[connection signal="mouse_exited" from="SignalIcon" to="." method="_on_signal_icon_mouse_exited"]
